Ajustes finais na camada de resultados